# mdview_rs

./: .gitignore  Cargo.toml  test.md
cli/: Cargo.toml  main.rs
generator/: Cargo.toml
html/: Cargo.toml  lib.rs  serializer.rs  string_gen.rs
lexer/: Cargo.toml  lib.rs  node_gen.rs  structures.rs
src/: main.rs
src/html/: Cargo.toml  lib.rs  serializer.rs  string_gen.rs
src/lexer/: Cargo.toml  lib.rs  node_gen.rs  structures.rs
src/window/: Cargo.toml  lib.rs
