[package]
name = "mdview"
version = "0.1.0"
authors = ["Skyler van Boheemen"]
edition = "2018"

[[bin]]
name = "mdview"
path = "./src/main.rs"

[dependencies]
mdview-lexer = { path = "./src/lexer", version = "0.1.0" }
mdview-html = { path = "./src/html", version = "0.1.0" }
serde = { version = "1.0.126", features = ["derive"] }
clap = "2.33.3"
serde_json = "1.0.64"
regex = "1.5.4"