[package]
name = "mdview"
version = "0.1.0"
authors = ["Skyler van Boheemen"]
edition = "2018"

[[bin]]
name = "mdview"
path = "./src/main.rs"

[dependencies]
mdview-lexer = { path = "./src/lexer", version = "0.1.0" }
mdview-window = { path = "./src/window", version = "0.1.0" }
mdview-html = { path = "./src/html", version = "0.1.0" }
clap = "2.33.3"
regex = "1.5.4"